Fixed header layout and navigaton spacing

--- a/squarespace/styles/custom-bf.css
+++ b/squarespace/styles/custom-bf.css
@@ -1,1 +1,1 @@
-#banner-wrapper{background:#ac1d37;padding:25px;position:absolute;top:0;left:0}#main-navigation .delimiter{display:none}.horizontal-navigation-bar nav ul li{margin:0 0 0 2em}#page-footer-wrapper{background:#ac1d37;color:#fff}#page-footer img{display:inline-block}
+#banner{background:#ac1d37;padding:25px;position:absolute;top:0;left:0}.horizontal-navigation-bar{padding:3em 0 1.5em}.horizontal-navigation-bar nav ul li a{margin:0 0 0 2em}.horizontal-navigation-bar .delimiter{display:none}#page-footer-wrapper{background:#ac1d37;color:#fff}#page-footer img{display:inline-block}
